--- a/_src/_includes/sass/compositions/_grid.scss
+++ b/_src/_includes/sass/compositions/_grid.scss
@@ -13,6 +13,6 @@
 
   &[data-layout='thirds'] {
     --grid-placement: auto-fit;
-    --grid-min-item-size: clamp(16rem, 33%, 26rem);
+    --grid-min-item-size: clamp(20rem, 33%, 26rem);
   }
 }
